--- a/index.html
+++ b/index.html
@@ -24,6 +24,41 @@
         color: red;
     }
 
+    button {
+        align-items: center;
+        background-color: #fff;
+        border: 1px solid #dbdbdb;
+        border-radius: .375em;
+        box-shadow: none;
+        box-sizing: border-box;
+        color: #363636;
+        cursor: pointer;
+        display: inline-flex;
+        font-size: 12px;
+        height: 2.5em;
+        justify-content: center;
+        line-height: 1.5;
+        padding: calc(.5em - 1px) 1em;
+        position: relative;
+        text-align: center;
+        touch-action: manipulation;
+        vertical-align: top;
+        white-space: nowrap;
+    }
+
+    .primaryButton {
+        background-color: #292929;
+        border-color: transparent;
+        color: #fff;    
+    }
+
+    .weight_label {
+        font-size: 12px;
+        width: 135px;
+        margin-right: 8px;
+        font-weight:400;
+    }
+
     /* The Modal (background) */
     .modal {
         display: none;
@@ -52,9 +87,10 @@
     .modal-content {
         background-color: #fefefe;
         margin: auto;
-        padding: 20px;
+        padding: 32px;
         border: 1px solid #888;
-        width: 35vw;
+        width: 350px;
+        border-radius: 20px;
     }
 
     /* The Close Button */
@@ -63,6 +99,7 @@
         float: right;
         font-size: 28px;
         font-weight: bold;
+        height:20px;
     }
 
     .close:hover,
@@ -72,10 +109,6 @@
         cursor: pointer;
     }
 
-    button {
-        margin: 0px;
-        font-size: small;
-    }
 
     label {
         font-size: small;
@@ -165,13 +198,13 @@
 
 <body>
     <!-- Main container -->
-    <div class="container" style="max-width: 1440px; padding-top: 16px; padding-left: 20px; 
+    <div class="container" style="max-width: 1440px; padding-top: 24px; padding-left: 20px; 
     padding-right: 20px; margin-left: auto; margin-right: auto; display: flex;">
 
         <!--  Selections  -->
         <div
             style="padding-left: 20px; padding-right: 24px;">
-            <div id="observablehq-viewof-homeType-e32e508c" style="padding-top:16px"></div>
+            <div id="observablehq-viewof-homeType-e32e508c"></div>
             <div id="observablehq-viewof-selected-e32e508c" style="padding-top:4px"></div>
             <!--  Map -->
             <div id="observablehq-mapview-e32e508c" style="padding-top:16px"></div>
@@ -180,18 +213,19 @@
 
         <!--  Comparison  -->
         <div style=" margin-right:24px; box-sizing: border-box; position: relative;">
-            <div style="display: flex; font-size: x-small; justify-content: center;">
+            <div style="display: flex; font-size: x-small; justify-content: left; margin-bottom: 8px;">
                 <div id="observablehq-favourite_buttons-e32e508c"></div>
-                <div style="display: flex; justify-content: center;"><button id="myBtn">Adjust Weights</button></div>
+                <div style="display: flex; justify-content: center;"><button id="myBtn" class="primaryButton">Adjust Weights</button></div>
             </div>
-            <div id="observablehq-viewof-final_plot-e32e508c"></div>
+            <div id="observablehq-viewof-ordering-e32e508c"></div>
+            <div id="observablehq-viewof-final_plot-e32e508c" style="margin-top: 16px;"></div>
             <div id="observablehq-viewof-legend-e32e508c" style="position: absolute; bottom: 20px; right: 0;"></div>
         </div>
 
         <!--  Detailed view  -->
         <div> 
         <div id="observablehq-selected_city_text-e32e508c"></div>
-        <div id="observablehq-viewof-final_details-e32e508c" style="max-width: 500px; overflow-y: scroll; max-height:95vh;"></div>
+        <div id="observablehq-viewof-final_details-e32e508c" style="max-width: 500px; overflow-y: scroll; max-height:90vh;"></div>
         </div>
 
         <!--  Dependencies  -->
@@ -202,7 +236,6 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <div id="observablehq-viewof-ordering-e32e508c"></div>
                 <div id="observablehq-viewof-attr_weights-e32e508c"></div>
             </div>
         </div>
